<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:orientation="vertical">




    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/use_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_sms"/>

        <RadioButton
            android:id="@+id/use_phone_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_phone_call"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotificationPhone"/>

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="059.."
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MotherPhone"/>

        <EditText
            android:id="@+id/mother_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="059.."
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FatherPhone"/>

        <EditText
            android:id="@+id/father_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="059.."
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TrainerPhone"/>

        <EditText
            android:id="@+id/trainer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="059.."
            android:inputType="phone" />

    </RadioGroup>

    <Button
        android:id="@+id/done"
        android:layout_below="@id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"/>

</RelativeLayout>