<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MinAttention"/>

    <SeekBar
        android:id="@+id/minAttention"
        android:layout_below="@id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="199dp"
        android:max="100" />


    <TextView
        android:id="@+id/text2"
        android:layout_below="@id/minAttention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MaxAttention"/>

    <SeekBar
        android:id="@+id/maxAttention"
        android:layout_below="@id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="199dp"
        android:max="100" />


    <TextView
        android:id="@+id/text3"
        android:layout_below="@id/maxAttention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MinMeditation"/>

    <SeekBar
        android:layout_below="@id/text3"
        android:id="@+id/minMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="199dp"
        android:max="100" />


    <TextView
        android:id="@+id/text4"
        android:layout_below="@id/minMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MaxMeditation"/>

    <SeekBar
        android:layout_below="@id/text4"
        android:id="@+id/maxMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="199dp"
        android:max="100" />

    <RadioGroup
        android:id="@+id/group1"
        android:layout_below="@id/maxMeditation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/prefer_music_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/PreferMusic"/>

        <RadioButton
            android:id="@+id/prefer_bubbles_colors_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PreferBubblesAndColor"/>

        <RadioButton
            android:id="@+id/prefer_random_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Random"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/group2"
        android:layout_below="@id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/arabic_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="اللغة العربية"/>

        <RadioButton
            android:id="@+id/english_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="English"/>
    </RadioGroup>

    <Button
        android:layout_below="@id/group2"
        android:id="@+id/contact_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_settings"/>

    <Button
        android:id="@+id/done"
        android:layout_below="@id/contact_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"/>

</RelativeLayout>